test/test_bad/test_sec_7_01/mod3.yang
module mod3 {
  //namespace "urn:mod3"; // error: namespace/prefix/yang-version  don't exist

  grouping gg3 {
    leaf le3 {
      type string;
    }
  }
}


